// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DownloadItems Download Items With Manual And Drawings 1`] = `
<div
  className="sc-jSFkmK cQjiJW"
>
  <a
    data-for="manual-tip"
    data-tip={true}
    href="FAKE_MANUAL"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      className="__react_component_tooltip t48ee21f7-3c59-4557-bbc7-7114ac159de8 place-top type-dark"
      data-id="tooltip"
      id="manual-tip"
    >
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "
  	.t48ee21f7-3c59-4557-bbc7-7114ac159de8 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t48ee21f7-3c59-4557-bbc7-7114ac159de8.place-top {
        margin-top: -10px;
    }
    .t48ee21f7-3c59-4557-bbc7-7114ac159de8.place-top::before {
        border-top: 8px solid transparent;
    }
    .t48ee21f7-3c59-4557-bbc7-7114ac159de8.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t48ee21f7-3c59-4557-bbc7-7114ac159de8.place-bottom {
        margin-top: 10px;
    }
    .t48ee21f7-3c59-4557-bbc7-7114ac159de8.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t48ee21f7-3c59-4557-bbc7-7114ac159de8.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t48ee21f7-3c59-4557-bbc7-7114ac159de8.place-left {
        margin-left: -10px;
    }
    .t48ee21f7-3c59-4557-bbc7-7114ac159de8.place-left::before {
        border-left: 8px solid transparent;
    }
    .t48ee21f7-3c59-4557-bbc7-7114ac159de8.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t48ee21f7-3c59-4557-bbc7-7114ac159de8.place-right {
        margin-left: 10px;
    }
    .t48ee21f7-3c59-4557-bbc7-7114ac159de8.place-right::before {
        border-right: 8px solid transparent;
    }
    .t48ee21f7-3c59-4557-bbc7-7114ac159de8.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
          }
        }
      />
      <span>
        Download Manual
      </span>
    </div>
    <img
      alt="Manual"
      src="manual.svg"
    />
  </a>
  <a
    data-for="drawings-tip"
    data-tip={true}
    href="FAKE_DRAWINGS"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      className="__react_component_tooltip t6c0d2e0f-32c5-45ab-a10b-1d3ebf72bb02 place-top type-dark"
      data-id="tooltip"
      id="drawings-tip"
    >
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "
  	.t6c0d2e0f-32c5-45ab-a10b-1d3ebf72bb02 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t6c0d2e0f-32c5-45ab-a10b-1d3ebf72bb02.place-top {
        margin-top: -10px;
    }
    .t6c0d2e0f-32c5-45ab-a10b-1d3ebf72bb02.place-top::before {
        border-top: 8px solid transparent;
    }
    .t6c0d2e0f-32c5-45ab-a10b-1d3ebf72bb02.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t6c0d2e0f-32c5-45ab-a10b-1d3ebf72bb02.place-bottom {
        margin-top: 10px;
    }
    .t6c0d2e0f-32c5-45ab-a10b-1d3ebf72bb02.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t6c0d2e0f-32c5-45ab-a10b-1d3ebf72bb02.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t6c0d2e0f-32c5-45ab-a10b-1d3ebf72bb02.place-left {
        margin-left: -10px;
    }
    .t6c0d2e0f-32c5-45ab-a10b-1d3ebf72bb02.place-left::before {
        border-left: 8px solid transparent;
    }
    .t6c0d2e0f-32c5-45ab-a10b-1d3ebf72bb02.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t6c0d2e0f-32c5-45ab-a10b-1d3ebf72bb02.place-right {
        margin-left: 10px;
    }
    .t6c0d2e0f-32c5-45ab-a10b-1d3ebf72bb02.place-right::before {
        border-right: 8px solid transparent;
    }
    .t6c0d2e0f-32c5-45ab-a10b-1d3ebf72bb02.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
          }
        }
      />
      <span>
        Download Drawings
      </span>
    </div>
    <img
      alt="Drawings"
      src="drawings.svg"
    />
  </a>
</div>
`;

exports[`Storyshots DownloadItems Download Items With Manual And No Drawings 1`] = `
<div
  className="sc-jSFkmK cQjiJW"
>
  <a
    data-for="manual-tip"
    data-tip={true}
    href="FAKE_MANUAL"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      className="__react_component_tooltip t76231f1e-6331-4362-85dd-8e8667130119 place-top type-dark"
      data-id="tooltip"
      id="manual-tip"
    >
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "
  	.t76231f1e-6331-4362-85dd-8e8667130119 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t76231f1e-6331-4362-85dd-8e8667130119.place-top {
        margin-top: -10px;
    }
    .t76231f1e-6331-4362-85dd-8e8667130119.place-top::before {
        border-top: 8px solid transparent;
    }
    .t76231f1e-6331-4362-85dd-8e8667130119.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t76231f1e-6331-4362-85dd-8e8667130119.place-bottom {
        margin-top: 10px;
    }
    .t76231f1e-6331-4362-85dd-8e8667130119.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t76231f1e-6331-4362-85dd-8e8667130119.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t76231f1e-6331-4362-85dd-8e8667130119.place-left {
        margin-left: -10px;
    }
    .t76231f1e-6331-4362-85dd-8e8667130119.place-left::before {
        border-left: 8px solid transparent;
    }
    .t76231f1e-6331-4362-85dd-8e8667130119.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t76231f1e-6331-4362-85dd-8e8667130119.place-right {
        margin-left: 10px;
    }
    .t76231f1e-6331-4362-85dd-8e8667130119.place-right::before {
        border-right: 8px solid transparent;
    }
    .t76231f1e-6331-4362-85dd-8e8667130119.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
          }
        }
      />
      <span>
        Download Manual
      </span>
    </div>
    <img
      alt="Manual"
      src="manual.svg"
    />
  </a>
  
</div>
`;

exports[`Storyshots DownloadItems Download Items With No Manual And Drawings 1`] = `
<div
  className="sc-jSFkmK cQjiJW"
>
  
  <a
    data-for="drawings-tip"
    data-tip={true}
    href="FAKE_DRAWINGS"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      className="__react_component_tooltip te604fefd-586e-4bc7-b9cc-d82b3c1dfa7e place-top type-dark"
      data-id="tooltip"
      id="drawings-tip"
    >
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "
  	.te604fefd-586e-4bc7-b9cc-d82b3c1dfa7e {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.te604fefd-586e-4bc7-b9cc-d82b3c1dfa7e.place-top {
        margin-top: -10px;
    }
    .te604fefd-586e-4bc7-b9cc-d82b3c1dfa7e.place-top::before {
        border-top: 8px solid transparent;
    }
    .te604fefd-586e-4bc7-b9cc-d82b3c1dfa7e.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .te604fefd-586e-4bc7-b9cc-d82b3c1dfa7e.place-bottom {
        margin-top: 10px;
    }
    .te604fefd-586e-4bc7-b9cc-d82b3c1dfa7e.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .te604fefd-586e-4bc7-b9cc-d82b3c1dfa7e.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .te604fefd-586e-4bc7-b9cc-d82b3c1dfa7e.place-left {
        margin-left: -10px;
    }
    .te604fefd-586e-4bc7-b9cc-d82b3c1dfa7e.place-left::before {
        border-left: 8px solid transparent;
    }
    .te604fefd-586e-4bc7-b9cc-d82b3c1dfa7e.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .te604fefd-586e-4bc7-b9cc-d82b3c1dfa7e.place-right {
        margin-left: 10px;
    }
    .te604fefd-586e-4bc7-b9cc-d82b3c1dfa7e.place-right::before {
        border-right: 8px solid transparent;
    }
    .te604fefd-586e-4bc7-b9cc-d82b3c1dfa7e.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
          }
        }
      />
      <span>
        Download Drawings
      </span>
    </div>
    <img
      alt="Drawings"
      src="drawings.svg"
    />
  </a>
</div>
`;

exports[`Storyshots DownloadItems Download Items With No Manual And No Drawings 1`] = `
<div
  className="sc-jSFkmK cQjiJW"
>
  
  
</div>
`;
